@@ -15,33 +15,33 @@
 #'
 #' @param file [character] (**required**):
 #' file name and path of the output file
-#' 
+#'
 #' - `[WIN]`: `write_R2BIN(object, "C:/Desktop/test.bin")`
 #' - `[MAC/LINUX]`: `write_R2BIN("/User/test/Desktop/test.bin")`
 #'
-#' @param version [character] (*optional*): 
+#' @param version [character] (*optional*):
 #' version number for the output file. If no value is provided the highest
 #' version number from the [Risoe.BINfileData-class] is taken automatically.
 #'
 #' **Note:**
 #' This argument can be used to convert BIN-file versions.
 #'
-#' @param compatibility.mode [logical] (*with default*): 
-#' this option recalculates the position values if necessary and set the max. 
-#' value to 48. The old position number is appended as comment (e.g., 'OP: 70). 
+#' @param compatibility.mode [logical] (*with default*):
+#' this option recalculates the position values if necessary and set the max.
+#' value to 48. The old position number is appended as comment (e.g., 'OP: 70).
 #' This option accounts for potential compatibility problems with the Analyst software.
 #'
-#' @param txtProgressBar [logical] (*with default*): 
+#' @param txtProgressBar [logical] (*with default*):
 #' enables or disables [txtProgressBar].
-#' 
+#'
 #' @return Write a binary file.
-#' 
-#' @note 
+#'
+#' @note
 #' The function just roughly checks the data structures. The validity of
 #' the output data depends on the user.
 #'
-#' The validity of the file path is not further checked. BIN-file conversions 
-#' using the argument `version` may be a lossy conversion, depending on the 
+#' The validity of the file path is not further checked. BIN-file conversions
+#' using the argument `version` may be a lossy conversion, depending on the
 #' chosen input andoutput data (e.g., conversion from version 08 to 07 to 06 to 04 or 03).
 #'
 #' **Warning**
@@ -52,13 +52,13 @@
 #' BIN/BINX-file may not fully compatible, at least not similar to the once
 #' directly produced by the Risoe readers!
 #'
-#' @section Function version: 0.4.2
+#' @section Function version: 0.4.3
 #'
-#' @author 
+#' @author
 #' Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)
 #'
-#' @note 
-#' ROI definitions (introduced in BIN-file version 8) are not supported! 
+#' @note
+#' ROI definitions (introduced in BIN-file version 8) are not supported!
 #' There are furthermore ignored by the function [read_BIN2R].
 #'
 #' @seealso [read_BIN2R], [Risoe.BINfileData-class], [writeBin]
@@ -473,7 +473,7 @@ write_R2BIN <- function(
       ##SEQUENCE
 
       ##count number of characters
-      SEQUENCE_SIZE <- as.integer(nchar(as.character(object@METADATA[ID,"SEQUENCE"]), type = "bytes"))
+      SEQUENCE_SIZE <- as.integer(nchar(as.character(object@METADATA[["SEQUENCE"]][ID]), type = "bytes", keepNA = FALSE))
 
       writeBin(SEQUENCE_SIZE,
                con,
